[gd_scene load_steps=5 format=3 uid="uid://ch0fbadok54g0"]

[ext_resource type="PackedScene" uid="uid://dpy6saobjcw7e" path="res://scenes/player/player.tscn" id="1_bfgbk"]
[ext_resource type="Script" path="res://scenes/main/main.gd" id="1_krtus"]
[ext_resource type="PackedScene" uid="uid://5k16wh7yw23x" path="res://scenes/HUD.tscn" id="3_cpva2"]
[ext_resource type="AudioStream" uid="uid://bw5vhyee777b4" path="res://audio/appleseed.mp3" id="4_dlihh"]

[node name="main" type="Node2D"]
script = ExtResource("1_krtus")

[node name="Player" parent="." instance=ExtResource("1_bfgbk")]
position = Vector2(592, 548)

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(575, 333)

[node name="HUD" parent="." instance=ExtResource("3_cpva2")]

[node name="NextLevelTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_dlihh")
volume_db = -7.0
autoplay = true

[connection signal="planted_seed" from="Player" to="." method="_on_player_planted_seed"]
[connection signal="timeout" from="NextLevelTimer" to="." method="_on_next_level_timer_timeout"]
